# lava-playground

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: nuget.config
api/LavaPlayground.Api/: Dockerfile  LavaPlayground.Api.csproj  Program.cs
api/LavaPlayground.Api/Lava/: Expressions.cs  JsonObjectConverter.cs  LavaCapabilities.cs  LavaException.cs  LavaFilters.Arrays.cs  LavaFilters.Colors.cs  LavaFilters.Dates.cs  LavaFilters.Misc.cs  LavaFilters.Numbers.cs  LavaFilters.Strings.cs  LavaFilters.cs  LavaTemplate.cs  Shortcodes.cs  TagParams.cs  WhereClause.cs
api/LavaPlayground.Api/Properties/: launchSettings.json
api/LavaPlayground.Api/Rock/: RockConnection.cs
api/LavaPlayground.Api/SampleData/: sample-context.json  sample-entities.json
api/LavaPlayground.Tests/: LavaPlayground.Tests.csproj  Program.cs
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  env.d.ts  lessons.ts  style.css
frontend/src/components/: FilterReference.vue  LavaEditor.vue  LearnPanel.vue  LintPanel.vue  RockConnectPanel.vue  UpdateBanner.vue
linter/: Dockerfile  desktop_launcher.py
linter/app/: known.py  linter.py  main.py
linter/tests/: test_linter.py
