[package]
name = "lava-playground"
version = "1.0.0"
description = "Lava Playground"
authors = ["Yesu"]
edition = "2021"

[lib]
name = "lava_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
